--- a/compose.yml
+++ b/compose.yml
@@ -12,12 +12,14 @@ services:
       - "8000:8000"
     depends_on:
       - db
+      - model_server
     environment:
       DATABASE_NAME: ${DATABASE_NAME:-DB}
       DATABASE_USER: ${DATABASE_USER:-USER}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD:-PASSWORD}
       DATABASE_HOST: ${DATABASE_HOST:-db}
       DJANGO_SECRET_KEY: ${DJANGO_SETTINGS_MODULE}
+      MODEL_SERVER_ENDPOINT: ${MODEL_SERVER_ENDPOINT:-http://model_server:11434}
   
   db:
     image: postgres
@@ -29,5 +31,18 @@ services:
       - pgdata:/var/lib/postgresql/data
     restart: on-failure
 
+  model_server:
+    image: ollama/ollama:latest
+    volumes:
+      - ollamadata:/root/.ollama
+    deploy:
+      resources:
+        reservations:
+          devices:
+            - driver: nvidia
+              count: all
+              capabilities: [gpu]
+
 volumes:
   pgdata:
+  ollamadata:
