--- a/compose.yml
+++ b/compose.yml
@@ -5,7 +5,7 @@ services:
     image: nl2sqlapp
     build:
       context: .
-    container_name: NL2SQLApp_console
+    container_name: nl2sqlapp_console
     volumes:
       - .:/app
     ports:
@@ -21,6 +21,23 @@ services:
       DJANGO_SECRET_KEY: ${DJANGO_SETTINGS_MODULE}
       MODEL_SERVER_ENDPOINT: ${MODEL_SERVER_ENDPOINT:-http://model_server:11434}
       AVAILABLE_MODELS: ${AVAILABLE_MODELS:-llama2}
+
+  circle_ci_console:
+    image: nl2sqlapp
+    build:
+      context: .
+    container_name: circle_ci_console
+    depends_on:
+      - db_ci
+      - model_server_ci
+    environment:
+      DATABASE_NAME: ${DATABASE_NAME:-DB}
+      DATABASE_USER: ${DATABASE_USER:-USER}
+      DATABASE_PASSWORD: ${DATABASE_PASSWORD:-PASSWORD}
+      DATABASE_HOST: ${DATABASE_HOST:-db_ci}
+      DJANGO_SECRET_KEY: ${DJANGO_SETTINGS_MODULE}
+      MODEL_SERVER_ENDPOINT: ${MODEL_SERVER_ENDPOINT:-http://model_server_ci:11434}
+      AVAILABLE_MODELS: ${AVAILABLE_MODELS:-llama2}
   
   db:
     image: postgres
@@ -30,6 +47,14 @@ services:
       POSTGRES_DB: ${DATABASE_NAME:-DB}
     volumes:
       - pgdata:/var/lib/postgresql/data
+    restart: on-failure
+
+  db_ci:
+    image: postgres
+    environment:
+      POSTGRES_PASSWORD: ${DATABASE_PASSWORD:-PASSWORD}
+      POSTGRES_USER: ${DATABASE_USER:-USER}
+      POSTGRES_DB: ${DATABASE_NAME:-DB}
     restart: on-failure
 
   model_server:
@@ -43,6 +68,10 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+
+  model_server_ci:
+    image: ollama/ollama:latest
+
 
 volumes:
   pgdata:
