--- a/compose.yml
+++ b/compose.yml
@@ -35,7 +35,7 @@ services:
       DATABASE_USER: ${DATABASE_USER:-USER}
       DATABASE_PASSWORD: ${DATABASE_PASSWORD:-PASSWORD}
       DATABASE_HOST: ${DATABASE_HOST:-db_ci}
-      DJANGO_SECRET_KEY: ${DJANGO_SETTINGS_MODULE}
+      DJANGO_SECRET_KEY: dummy
       MODEL_SERVER_ENDPOINT: ${MODEL_SERVER_ENDPOINT:-http://model_server_ci:11434}
       AVAILABLE_MODELS: ${AVAILABLE_MODELS:-llama2}
   
