--- a/compose.yml
+++ b/compose.yml
@@ -31,13 +31,14 @@ services:
       - db_ci
       - model_server_ci
     environment:
-      DATABASE_NAME: ${DATABASE_NAME:-DB}
-      DATABASE_USER: ${DATABASE_USER:-USER}
-      DATABASE_PASSWORD: ${DATABASE_PASSWORD:-PASSWORD}
-      DATABASE_HOST: ${DATABASE_HOST:-db_ci}
+      DATABASE_NAME: DB
+      DATABASE_USER: USER
+      DATABASE_PASSWORD: PASSWORD
+      DATABASE_HOST: db_ci
       DJANGO_SECRET_KEY: dummy
-      MODEL_SERVER_ENDPOINT: ${MODEL_SERVER_ENDPOINT:-http://model_server_ci:11434}
-      AVAILABLE_MODELS: ${AVAILABLE_MODELS:-llama2}
+      MODEL_SERVER_ENDPOINT: http://model_server_ci:11434
+      AVAILABLE_MODELS: llama2
+      DOWNLOAD_MODELS_ON_FLY: llama2
   
   db:
     image: postgres
