--- a/compose.yml
+++ b/compose.yml
@@ -29,14 +29,14 @@ services:
     container_name: circle_ci_console
     depends_on:
       - db_ci
-      - model_server_ci
+      - model_server
     environment:
       DATABASE_NAME: DB
       DATABASE_USER: USER
       DATABASE_PASSWORD: PASSWORD
       DATABASE_HOST: db_ci
       DJANGO_SECRET_KEY: dummy
-      MODEL_SERVER_ENDPOINT: http://model_server_ci:11434
+      MODEL_SERVER_ENDPOINT: http://model_server:11434
       AVAILABLE_MODELS: llama2
       DOWNLOAD_MODELS_ON_FLY: llama2
   
@@ -62,16 +62,6 @@ services:
     image: ollama/ollama:latest
     volumes:
       - ollamadata:/root/.ollama
-    deploy:
-      resources:
-        reservations:
-          devices:
-            - driver: nvidia
-              count: all
-              capabilities: [gpu]
-
-  model_server_ci:
-    image: ollama/ollama:latest
 
 
 volumes:
